# clash_to_singbox

./: CMakeLists.txt  toolchain.cmake
src/: main.cpp
src/proxy/: proxy.cpp  proxy.h
